[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/WinScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/Poppins-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 46
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 26
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 26
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[node name="WinScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 0.501961 )

[node name="Text" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.0
margin_top = -103.0
margin_right = 117.0
margin_bottom = -36.0
theme = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]You Lost...[/center]"
text = "You Lost..."

[node name="NextGame" type="Button" parent="CanvasLayer/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.0
margin_top = -22.0
margin_right = 77.0
margin_bottom = 22.0
theme = SubResource( 4 )
text = "Next Game"

[node name="Exit" type="Button" parent="CanvasLayer/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.5
margin_top = 37.0
margin_right = 27.5
margin_bottom = 81.0
theme = SubResource( 6 )
text = "Exit"

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="CanvasLayer/ColorRect/NextGame" to="." method="_on_NextGame_pressed"]
[connection signal="pressed" from="CanvasLayer/ColorRect/Exit" to="." method="_on_Exit_pressed"]
